# apertium-crh-tur

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-crh-tur.crh-tur.dix  apertium-crh-tur.crh-tur.lrx  apertium-crh-tur.crh-tur.rtx  apertium-crh-tur.crh-tur.t1x  apertium-crh-tur.crh-tur.t2x  apertium-crh-tur.crh-tur.t4x  apertium-crh-tur.tur-crh.lrx  apertium-crh-tur.tur-crh.rtx  apertium-crh-tur.tur-crh.t1x  apertium-crh-tur.tur-crh.t4x  configure.ac  modes.xml
dev/: bidix-sanity.sh  corpus-errors.sh  corpus-stats.sh  find-terms.py
dev/testvoc/: prefixes.txt  testvoc.sh
t/: README.org  config.sh  config.sh.in  wiki-tests
test/: crh-tur-pending-chunker2-expected.txt  crh-tur-pending-disam-expected.txt  crh-tur-pending-generator-expected.txt  crh-tur-pending-generator-gold.txt  crh-tur-pending-input.txt  crh-tur-pending-interchunk-expected.txt  crh-tur-pending-lex-expected.txt  crh-tur-pending-morph-expected.txt  crh-tur-pending-postchunk-expected.txt  crh-tur-pending-pretransfer-expected.txt  crh-tur-pending-tagger-expected.txt  crh-tur-regression-chunker-expected.txt  crh-tur-regression-chunker2-expected.txt  crh-tur-regression-disam-expected.txt  crh-tur-regression-generator-expected.txt  crh-tur-regression-generator-gold.txt  crh-tur-regression-input.txt  crh-tur-regression-lex-expected.txt  crh-tur-regression-morph-expected.txt  crh-tur-regression-postchunk-expected.txt  crh-tur-regression-pretransfer-expected.txt  tests.json
texts/: challenge.crh.txt  challenge.tur.txt  qarilgaclar.crh.txt  qarilgaclar.txt
(+1 files in other folders)
